--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                   </a>
                   <input type="checkbox" id="sm1">
                   <ul class="sub-menu Y_axis_sub_menu y_scrollable_menu">
-                    <li><a href="#" onclick = "ChangeY('Frequency')">Frequency</a></li>
-                    <li><a href="#" onclick = "ChangeY('Popularity')">Popularity</a></li>
-                    <li><a href="#" onclick = "ChangeY('Revenue')">Revenue</a></li>
-                    <li><a href="#" onclick = "ChangeY('Budget')">Budget</a></li>
-                    <li><a href="#" onclick = "ChangeY('Profit')">Profit</a></li>
-                    <li><a href="#" onclick = "ChangeY('Rating')">Rating</a></li>
-                    <li><a href="#" onclick = "ChangeY('Runtime')">Runtime</a></li>
-                    <li><a href="#" onclick = "ChangeY('Vote Count')">Vote Count</a></li>
+                    <li><a onclick = "ChangeY('Frequency')">Frequency</a></li>
+                    <li><a onclick = "ChangeY('Popularity')">Popularity</a></li>
+                    <li><a onclick = "ChangeY('Revenue')">Revenue</a></li>
+                    <li><a onclick = "ChangeY('Budget')">Budget</a></li>
+                    <li><a onclick = "ChangeY('Profit')">Profit</a></li>
+                    <li><a onclick = "ChangeY('Rating')">Rating</a></li>
+                    <li><a onclick = "ChangeY('Runtime')">Runtime</a></li>
+                    <li><a onclick = "ChangeY('Vote Count')">Vote Count</a></li>
                   </ul>
                 </li>
               </ul>
