--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href='https://fonts.googleapis.com/css?family=Yeseva One' rel='stylesheet'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v3.min.js"></script>
-    <script src = "./test.js"></script>
   </head>
   <body>
     <div class = "controls_column">
@@ -149,6 +148,7 @@
       <div class = "timeline_viz">
       </div>
     </div>
+    <script src = "./test.js" type="text/javascript"></script>
     <script type="text/javascript">
       $(".Y_axis_sub_menu > li").click(function() {
         $("#Y_axis_sub_menu_heading").text($(this).text()+" "); 
