--- a/index.html
+++ b/index.html
@@ -116,24 +116,24 @@
                   </a>
                   <input type="checkbox" id="sm1">
                   <ul class="sub-menu genre_scrollable_menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Adventure</a></li>
-                    <li><a href="#">Animation</a></li>
-                    <li><a href="#">Comedy</a></li>
-                    <li><a href="#">Crime</a></li>
-                    <li><a href="#">Documentary</a></li>
-                    <li><a href="#">Drama</a></li>
-                    <li><a href="#">Family</a></li>
-                    <li><a href="#">Fantasy</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Horror</a></li>
-                    <li><a href="#">Music</a></li>
-                    <li><a href="#">Mystery</a></li>
-                    <li><a href="#">Romance</a></li>
-                    <li><a href="#">Science Fiction</a></li>
-                    <li><a href="#">Thriller</a></li>
-                    <li><a href="#">War</a></li>
-                    <li><a href="#">Western</a></li>
+                    <li><a onclick = "ChangeGenre('Action')">Action</a></li>
+                    <li><a onclick = "ChangeGenre('Adventure')">Adventure</a></li>
+                    <li><a onclick = "ChangeGenre('Animation')">Animation</a></li>
+                    <li><a onclick = "ChangeGenre('Comedy')">Comedy</a></li>
+                    <li><a onclick = "ChangeGenre('Crime')">Crime</a></li>
+                    <li><a onclick = "ChangeGenre('Documentary')">Documentary</a></li>
+                    <li><a onclick = "ChangeGenre('Drama')">Drama</a></li>
+                    <li><a onclick = "ChangeGenre('Family')">Family</a></li>
+                    <li><a onclick = "ChangeGenre('Fantasy')">Fantasy</a></li>
+                    <li><a onclick = "ChangeGenre('History')">History</a></li>
+                    <li><a onclick = "ChangeGenre('Horror')">Horror</a></li>
+                    <li><a onclick = "ChangeGenre('Music')">Music</a></li>
+                    <li><a onclick = "ChangeGenre('Mystery')">Mystery</a></li>
+                    <li><a onclick = "ChangeGenre('Romance')">Romance</a></li>
+                    <li><a onclick = "ChangeGenre('Science Fiction')">Science Fiction</a></li>
+                    <li><a onclick = "ChangeGenre('Thriller')">Thriller</a></li>
+                    <li><a onclick = "ChangeGenre('War')">War</a></li>
+                    <li><a onclick = "ChangeGenre('Western')">Western</a></li>
                   </ul>
                 </li>
               </ul>
