--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
             <input type="checkbox" id="tm">
             <ul class="main-menu clearfix">
-              <li><a href="#">2-level DD 
+              <li><a>2-level DD 
                   <span class="drop-icon">▾</span>
                   <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
                 </a>
@@ -55,18 +55,18 @@
               <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
               <input type="checkbox" id="tm">
               <ul class="main-menu clearfix">
-                <li><a href="#" id = "Color_sub_menu_heading">Genre
+                <li><a id = "Color_sub_menu_heading">Genre
                     <span class="drop-icon">▾</span>
                     <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
                   </a>
                   <input type="checkbox" id="sm1">
                   <ul class="sub-menu Color_sub_menu color_scrollable_menu">
-                    <li><a href="#">Genre</a></li>
-                    <li><a href="#">Popularity</a></li>
-                    <li><a href="#">Runtime</a></li>
-                    <li><a href="#">Revenue</a></li>
-                    <li><a href="#">Profit</a></li>
-                    <li><a href="#">Budget</a></li>
+                    <li><a>Genre</a></li>
+                    <li><a>Popularity</a></li>
+                    <li><a>Runtime</a></li>
+                    <li><a>Revenue</a></li>
+                    <li><a>Profit</a></li>
+                    <li><a>Budget</a></li>
                   </ul>
                 </li>
               </ul>
