--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
               </ul>
             </nav>
           </div>
+          <div class = "Genre_tags">
+            <p>Action</p>
+          </div>
         </div>
       </div>
     </div>
