--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </nav>
           </div>
           <div class = "Genre_tags">
-            <div class = "tag"><a>Action</a></div>
+            <div class = "tag"><a>Action</a><a>x</a></div>
           </div>
         </div>
       </div>
