--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
         <div class = "Genre_tags">
           <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
           <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
+          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
+          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
+          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
+          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
         </div>
       </div>
     </div>
