--- a/index.html
+++ b/index.html
@@ -141,12 +141,7 @@
           </div>
         </div>
         <div class = "Genre_tags">
-          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Adventureduisfi&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
-          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
-          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
-          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
-          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
-          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
+          <div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Adventureduisfi&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
         </div>
       </div>
     </div>
