--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
           </div>
         </div>
         <div class = "Genre_tags">
-          <div class = "tag"><a>Action&nbsp</a><a class = "close_tag">x</a></div>
+          <div class = "tag"><a>Action&nbsp</a><a class = "close_tag">x</a></div><div class = "tag"><a>Adventureduisfi&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div><div class = "tag"><a>Action&nbsp</a><a>x</a></div>
         </div>
+      </div>
     </div>
     <div class = "viz_column">
       <div class = "graph_viz">
