--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
         $("#Y_axis_sub_menu_heading").append('<span class="drop-icon">▾</span><label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>');
       });
       
-      $('.close_tag').on('click', function() {
+      $('.close_tag').click(function() {
         console.log("Entering");
-        $(this).parent('div').remove();
-        genres.remove($(this).prev.text());
+//         $(this).parent('div').remove();
+//         genres.remove($(this).prev.text());
       });
       
       $(".genre_sub_menu > li").click(function() {
