--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
       
       $(document).on('click', '.close_tag', function() { 
         console.log($(this).prev().text(),"efre","jjb");
+        console.log(genres.indexOf($(this).prev().text()));
         genres.splice(genres.indexOf($(this).prev().text()), 1);
         $(this).parent('div').remove();   
         console.log(genres);
