--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
             d.className = "tag";
             var a1 = document.createElement("a");
             a1.appendChild(document.createTextNode(str2));
-            a1.appendChild(document.createTextNode("\u00A0"));
             var a2 = document.createElement("a");
             a2.appendChild(document.createTextNode("x"));
             a2.className = "close_tag";
             d.appendChild(a1);
+            d.appendChild(document.createTextNode("\u00A0"));
             d.appendChild(a2);
             tag_holder.appendChild(d);
             genres.push(str2);
