--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
             a2.className = "close_tag";
             var str3 = "RemoveGenre(\'";
             var str4 = "\')";
-            str3.concat(str2, str4);
-            console.log(str3);
-            a2.setAttribute("onclick", str3);
+            var str5 = str3.concat(str2, str4);
+            console.log(str5);
+            a2.setAttribute("onclick", str5);
             d.appendChild(a1);
             d.appendChild(document.createTextNode("\u00A0"));
             d.appendChild(a2);
