--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
           var str2 = $(this).text();
           if (!genres.includes(str2)) {
             var d = document.createElement("div");
-            var str1 = "tag ";
-            d.className = str1.concat(str2);
+            d.className = str2;
             var a1 = document.createElement("a");
             a1.appendChild(document.createTextNode(str2));
             var a2 = document.createElement("a");
