--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           if (str2 == "All") {
             for (i = 0; i < all_genres.length; i++) {
               var d = document.createElement("div");
-              d.className = str2;
+              d.className = all_genres[i];
               var a1 = document.createElement("a");
               a1.appendChild(document.createTextNode(all_genres[i]));
               var a2 = document.createElement("a");
