--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </a>
                   <input type="checkbox" id="sm1">
                   <ul class="sub-menu Y_axis_sub_menu y_scrollable_menu">
-                    <li><a onclick = "ChangeY('Frequency')">Frequency</a></li>
+                    <li><a onclick = "ChangeY('Frequency')">Number of Movies</a></li>
                     <li><a onclick = "ChangeY('Popularity')">Popularity</a></li>
                     <li><a onclick = "ChangeY('Revenue')">Revenue</a></li>
                     <li><a onclick = "ChangeY('Budget')">Budget</a></li>
