--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
               <input type="checkbox" id="tm">
               <ul class="main-menu clearfix">
-                <li><a id = "Y_axis_sub_menu_heading">Frequency 
+                <li><a id = "Y_axis_sub_menu_heading">Number of Movies
                     <span class="drop-icon">▾</span>
                     <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
                   </a>
