--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
     <div class = "controls_column">
       <div class = "movies_heading">Movies</div>
       <div class = "filters">
-        <div class = "filter_heading">Filter</div>
-        <div class = "filter_dropdown">
-          <nav id="menu">
-            <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
-            <input type="checkbox" id="tm">
-            <ul class="main-menu clearfix">
-              <li><a>2-level DD 
-                  <span class="drop-icon">▾</span>
-                  <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
-                </a>
-                <input type="checkbox" id="sm1">
-                <ul class="sub-menu">
-                  <li><a href="#">Item 2.1</a></li>
-                  <li><a href="#">Item 2.2
-                      <span class="drop-icon">▾</span>
-                      <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
-                    </a>
-                    <input type="checkbox" id="sm2">
-                    <ul class="sub-menu">
-                      <li><a href="#">Item 2.2.1</a></li>
-                      <li><a href="#">Item 2.2.2</a></li>
-                      <li><a href="#">Item 2.2.3</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">Item 3.4</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-      <div class = "bubble_control">
         <div class = "Bubble_heading">Cluster Bubbles</div>
+        <div class = "filter_box">  
+          <div class = "filter_heading"><p>Filter</p></div>
+          <div class = "filter_dropdown">
+            <nav id="menu">
+              <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
+              <input type="checkbox" id="tm">
+              <ul class="main-menu clearfix">
+                <li><a>2-level DD 
+                    <span class="drop-icon">▾</span>
+                    <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
+                  </a>
+                  <input type="checkbox" id="sm1">
+                  <ul class="sub-menu">
+                    <li><a href="#">Item 2.1</a></li>
+                    <li><a href="#">Item 2.2
+                        <span class="drop-icon">▾</span>
+                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                      </a>
+                      <input type="checkbox" id="sm2">
+                      <ul class="sub-menu">
+                        <li><a href="#">Item 2.2.1</a></li>
+                        <li><a href="#">Item 2.2.2</a></li>
+                        <li><a href="#">Item 2.2.3</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#">Item 3.4</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
         <div class = "Color_heading">
           <p>Color By</p>
           <div class = "Color_dropdown">
