--- a/index.html
+++ b/index.html
@@ -29,19 +29,38 @@
                   </a>
                   <input type="checkbox" id="sm1">
                   <ul class="sub-menu">
-                    <li><a href="#">Item 2.1</a></li>
-                    <li><a href="#">Item 2.2
+                    <li><a>Genre
+                        <span class="drop-icon">▾</span>
+                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                        </a>
+                      <input type="checkbox" id="sm2">
+                      <ul class="sub-menu">
+                      </ul>
+                    </li>
+                    <li><a>Actor
                         <span class="drop-icon">▾</span>
                         <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
                       </a>
                       <input type="checkbox" id="sm2">
                       <ul class="sub-menu">
-                        <li><a href="#">Item 2.2.1</a></li>
-                        <li><a href="#">Item 2.2.2</a></li>
-                        <li><a href="#">Item 2.2.3</a></li>
                       </ul>
                     </li>
-                    <li><a href="#">Item 3.4</a></li>
+                    <li><a>Language
+                        <span class="drop-icon">▾</span>
+                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                        </a>
+                      <input type="checkbox" id="sm2">
+                      <ul class="sub-menu">
+                      </ul>
+                    </li>
+                    <li><a>Production Company
+                        <span class="drop-icon">▾</span>
+                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                        </a>
+                      <input type="checkbox" id="sm2">
+                      <ul class="sub-menu">
+                      </ul>
+                    </li>
                   </ul>
                 </li>
               </ul>
