--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
               <input type="checkbox" id="tm">
               <ul class="main-menu clearfix">
-                <li><a>2-level DD 
+                <li><a>Select
                     <span class="drop-icon">▾</span>
                     <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
                   </a>
