--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
                         <span class="drop-icon">▾</span>
                         <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
                       </a>
-                      <input type="checkbox" id="sm2">
-                      <ul class="sub-menu">
+                      <input type="checkbox" id="sm3">
+                      <ul class="sub-menu" id = "actor_list">
+                        <input id="actor_input" type="text" placeholder="Search..">
                         <li><a>Tdff</a></li>
                         <li><a>Tdff</a></li>
                         <li><a>bjekrrff</a></li>
@@ -55,7 +56,7 @@
                         <span class="drop-icon">▾</span>
                         <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
                         </a>
-                      <input type="checkbox" id="sm2">
+                      <input type="checkbox" id="sm4">
                       <ul class="sub-menu">
                         <li><a>Tdff</a></li>
                         <li><a>Tdff</a></li>
@@ -66,7 +67,7 @@
                         <span class="drop-icon">▾</span>
                         <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
                         </a>
-                      <input type="checkbox" id="sm2">
+                      <input type="checkbox" id="sm5">
                       <ul class="sub-menu">
                         <li><a>Tdff</a></li>
                         <li><a>Tdff</a></li>
@@ -243,6 +244,15 @@
       $(".Color_sub_menu > li").click(function() {
         $("#Color_sub_menu_heading").text($(this).text()+" "); 
         $("#Color_sub_menu_heading").append('<span class="drop-icon">▾</span><label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>');
+      });
+      
+      $(document).ready(function(){
+        $("#actor_input").on("keyup", function() {
+          var value = $(this).val().toLowerCase();
+          $("#actor_list li a").filter(function() {
+            $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+          });
+        });
       });
     </script>
   </body>
