--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       </a>
                       <input type="checkbox" id="sm3">
                       <ul class="sub-menu" id = "actor_list">
-                        <input id="actor_input" type="text" placeholder="Search..">
+                        <input class="list_search" id="actor_input" type="text" placeholder="Search..">
                         <li><a>Tdff</a></li>
                         <li><a>Tdff</a></li>
                         <li><a>bjekrrff</a></li>
