--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         $("#actor_input").on("keyup", function() {
           var value = $(this).val().toLowerCase();
           $("#actor_list li").filter(function() {
-            $(this).toggle($(this).next().text().toLowerCase().indexOf(value) > -1)
+            $(this).toggle($(this).children().first().text().toLowerCase().indexOf(value) > -1)
           });
         });
       });
