--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         $("#actor_input").on("keyup", function() {
           var value = $(this).val().toLowerCase();
           $("#actor_list li a").filter(function() {
-            $(this).parent.toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            $(this).parent().toggle($(this).text().toLowerCase().indexOf(value) > -1)
           });
         });
       });
