--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class = "graph_viz">
       </div>
       <div class = "timeline_viz">
-        <svg class = "svg1" height = "300" width="1100">
+        <svg class = "svg1">
         </svg>
       </div>
     </div>
