--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 var a2 = document.createElement("a");
                 a2.appendChild(document.createTextNode("x"));
                 a2.className = "close_tag";
-                var str3 = "OnGenreDelected(\'";
+                var str3 = "onGenreDelected(\'";
                 var str4 = "\')";
                 var str5 = str3.concat(all_genres[i], str4);
                 a2.setAttribute("onclick", str5);
@@ -237,7 +237,7 @@
             var a2 = document.createElement("a");
             a2.appendChild(document.createTextNode("x"));
             a2.className = "close_tag";
-            var str3 = "OnGenreDelected(\'";
+            var str3 = "onGenreDelected(\'";
             var str4 = "\')";
             var str5 = str3.concat(str2, str4);
             a2.setAttribute("onclick", str5);
