--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div class = "viz_column">
       <div class = "graph_viz">
       </div>
-      <div class = "timeline_viz">
+      <div class = "timeline_viz" id = "timeline_viz">
         <svg class = "svg1">
         </svg>
       </div>
