Added bubble chart

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
     </div>
     <div class = "viz_column">
       <div class = "graph_viz">
+        <svg id = "svg2" width="500" height="500"></svg>
       </div>
       <div class = "timeline_viz" id = "timeline_viz">
         <svg class = "svg1">
