--- a/index.html
+++ b/index.html
@@ -84,23 +84,22 @@
           </div>
         </div>
         <div class = "Color_heading">
-          <p>Color By</p>
+          <p>Scale By</p>
           <div class = "Color_dropdown">
             <nav id="menu">
               <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
               <input type="checkbox" id="tm">
               <ul class="main-menu clearfix">
-                <li><a id = "Color_sub_menu_heading">Genre
+                <li><a id = "Color_sub_menu_heading">Popularity
                     <span class="drop-icon">▾</span>
                     <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
                   </a>
                   <input type="checkbox" id="sm1">
                   <ul class="sub-menu Color_sub_menu color_scrollable_menu">
-                    <li><a>Genre</a></li>
-                    <li><a>Popularity</a></li>
-                    <li><a>Revenue</a></li>
-                    <li><a>Profit</a></li>
-                    <li><a>Budget</a></li>
+                    <li><a onclick = "onBubbleScaleChanged('popularity')">Popularity</a></li>
+                    <li><a onclick = "onBubbleScaleChanged('rating')">Rating</a></li>
+                    <li><a onclick = "onBubbleScaleChanged('revenue')">Revenue</a></li>
+                    <li><a onclick = "onBubbleScaleChanged('budget')">Budget</a></li>
                   </ul>
                 </li>
               </ul>
