Changed filter dropdown

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li><a>tdff</a></li>
                       </ul>
                     </li>
-                    <li><a>Language
+                    <li><a>Director
                         <span class="drop-icon">▾</span>
                         <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
                         </a>
@@ -67,6 +67,17 @@
                       </ul>
                     </li>
                     <li><a>Production Company
+                        <span class="drop-icon">▾</span>
+                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                        </a>
+                      <input type="checkbox" id="sm5">
+                      <ul class="sub-menu">
+                        <li><a>Tdff</a></li>
+                        <li><a>Tdff</a></li>
+                        <li><a>bjekrrff</a></li>
+                      </ul>
+                    </li>
+                    <li><a>Keyword
                         <span class="drop-icon">▾</span>
                         <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
                         </a>
